swagger doc for stage routes
