# NodeJS/MongoDataApp/swagger.json
@@ -55,7 +55,7 @@
     },
     "/": {
       "get": {
-        "description": "login user",
+        "description": "Returns all users",
         "responses": {
           "200": {
             "description": "OK"
@@ -69,7 +69,33 @@
         }
       },
       "post": {
-        "description": "login user",
+        "description": "add user",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "description": "users name and lastName",
+            "type": "Object"
+          },
+          {
+            "name": "username",
+            "in": "body",
+            "description": "username",
+            "type": "String"
+          },
+          {
+            "name": "password",
+            "in": "body",
+            "description": "password",
+            "type": "String"
+          },
+          {
+            "name": "isAdmin",
+            "in": "body",
+            "description": "sets admin rights",
+            "type": "Boolean"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
